--- a/style.css
+++ b/style.css
@@ -1,48 +1,38 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  #map {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .e-marker {
-    transform-origin: bottom center;
-    cursor: pointer;
-    
-    &__marker {
-      fill: #fff !important;
-    }
-    
-    &__icon {
-      fill: #fff !important;
-    }
-    
-    &__image {
-      transform: scale(0);
-      transform-origin: 50% 50%;
-    }
-    
-    &__circle {
-      display: none;
-    }
-    
-    &__text {
-      font-size: 12px;
-      font-family: brandon-grotesque, sans-serif;
-      text-align: center;
-      opacity: 0;
-      color: #fff !important;
-      fill: #fff !important;
-      transform-origin: 50% 50%;
-      // Center SVG text
-      alignment-baseline: middle;
-      text-anchor: middle;
-    }  
-  }
-
-  
+  box-sizing: border-box;
+}
+#map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+.e-marker {
+  transform-origin: bottom center;
+  cursor: pointer;
+}
+.e-marker__marker {
+  fill: #fff !important;
+}
+.e-marker__icon {
+  fill: #fff !important;
+}
+.e-marker__image {
+  transform: scale(0);
+  transform-origin: 50% 50%;
+}
+.e-marker__circle {
+  display: none;
+}
+.e-marker__text {
+  font-size: 12px;
+  font-family: brandon-grotesque, sans-serif;
+  text-align: center;
+  opacity: 0;
+  color: #fff !important;
+  fill: #fff !important;
+  transform-origin: 50% 50%;
+  alignment-baseline: middle;
+  text-anchor: middle;
+}
